[package]
name = "negicon-protocol"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ux = { version = "0.1.5", default-features = false }
embedded-hal = { version = "0.2.5", features = ["unproven"] }
defmt = "0.3"
